--- a/app/src/main/res/layout/item_product_rekomendasi.xml
+++ b/app/src/main/res/layout/item_product_rekomendasi.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical">
 
     <com.makeramen.roundedimageview.RoundedImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/bg_banner"
         android:layout_width="164dp"
         android:layout_height="100dp"
         app:layout_constraintRight_toRightOf="parent"
@@ -27,21 +27,21 @@
         android:id="@+id/imageView4"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintStart_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="@+id/imageView2"
+        app:layout_constraintBottom_toBottomOf="@+id/bg_banner"
+        app:layout_constraintEnd_toEndOf="@+id/bg_banner"
+        app:layout_constraintStart_toStartOf="@+id/bg_banner"
+        app:layout_constraintTop_toTopOf="@+id/bg_banner"
         android:scaleType="centerCrop"
         android:src="@drawable/gradient_linechart_circle"
         />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_marginTop="42dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        app:layout_constraintBottom_toTopOf="@id/textView5"
+        app:layout_constraintBottom_toTopOf="@id/tv_subtitle"
         android:text="Sephia's Bakery"
         android:textColor="@color/colorWhite"
         android:textSize="@dimen/font_title"
@@ -50,14 +50,14 @@
          />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/tv_subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Toko Roti"
         app:layout_constraintBottom_toBottomOf="@id/imageView4"
         android:textColor="@color/colorWhite"
         android:textSize="@dimen/font_subtitle"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
+        app:layout_constraintStart_toStartOf="@+id/tv_title"
         android:layout_marginBottom="8dp"
         />
 
